--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 style="text-align: center; background-color: aqua;">Learning JavaScript Function</h1>
     <button id="but">Subscribe</button>
+
+    
     <script src="index.js"></script>
 </body>
 </html>
